[package]
name = "ret2script"
version = "1.6.2"
edition = "2021"
rust-version = "1.80.0"
description = "Checker script runner for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
homepage = "https://github.com/ret2shell/ret2script"
documentation = "https://docs.rs/ret2script"
repository = "https://github.com/ret2shell/ret2script"
readme = "./README.md"
keywords = ["ctf", "challenge", "rune", "script"]
license = "MIT"

[dependencies]
rune = { version = "0.13", features = ["workspace", "tokio"] }
rune-modules = { version = "0.13", features = ["full"] }
thiserror = "2.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
chrono = "0.4"
once_cell = "1.20"
tracing = "0.1"
ring = "0.17"
nanoid = "0.4"
uuid = { version = "1.11", features = ["v4", "fast-rng"] }
hex = "0.4"
clap = { version = "4.5", features = ["derive"], optional = true }
anyhow = { version = "1.0", optional = true }
colored = { version = "2.1", optional = true }
regex = "1.11"
aes = "0.8"

[features]
default = ["binary"]
binary = ["dep:clap", "dep:anyhow", "dep:colored"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "ret2script"
path = "src/main.rs"
required-features = ["binary"]
