[package]
authors       = ["Reverier-Xu <reverier.xu@woooo.tech>"]
description   = "Checker script runner for Ret2Shell - A feature-riches CTF challenge platform."
documentation = "https://docs.rs/ret2script"
edition       = "2021"
homepage      = "https://github.com/ret2shell/ret2script"
keywords      = ["ctf", "challenge", "rune", "script"]
license       = "MIT"
name          = "ret2script"
readme        = "./README.md"
repository    = "https://github.com/ret2shell/ret2script"
rust-version  = "1.88.0"
version       = "1.8.6"

[dependencies]
anyhow       = { version = "1.0", optional = true }
async-trait  = "0.1"
chrono       = "0.4"
clap         = { version = "4.5", features = ["derive"], optional = true }
colored      = { version = "3.0", optional = true }
hex          = "0.4"
nanoid       = "0.4"
once_cell    = "1.21"
regex        = "1.11"
ring         = "0.17"
rune         = { version = "0.14", features = ["workspace", "tokio"] }
rune-modules = { version = "0.14", features = ["full"] }
serde        = { version = "1.0", features = ["derive"] }
thiserror    = "2.0"
tokio        = { version = "1.46", features = ["full"] }
tracing      = "0.1"
uuid         = { version = "1.17", features = ["v4", "fast-rng"] }

[features]
binary  = ["dep:clap", "dep:anyhow", "dep:colored"]
default = ["binary"]

[lib]
path = "src/lib.rs"

[[bin]]
name              = "ret2script"
path              = "src/main.rs"
required-features = ["binary"]
